<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:background="@color/white">

    <TextView
        android:id="@+id/tvEventTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/settings_title"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btnLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/legend_title" />

    <Button
        android:id="@+id/btnCrewManagment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/crew_management_title" />

    <Button
        android:id="@+id/btnCurrentStatistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/current_statistics" />

    <Button
        android:id="@+id/btnEventsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/current_statistics" />

    <Button
        android:id="@+id/btnExportStatistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/export_statistic" />

</LinearLayout>