<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/ic_arrow_back"
        android:text="@string/edit_cancel"
        app:layout_constraintEnd_toStartOf="@id/btnCreateEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableEnd="@drawable/ic_check"
        android:text="@string/edit_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCrewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_screen_offset"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/default_screen_offset"
        android:text="@string/crew_management_description"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

    <EditText
        android:id="@+id/etCrew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_screen_offset"
        android:layout_marginEnd="@dimen/default_screen_offset"
        android:hint="@string/crew_management_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCrewDescription" />

    <TextView
        android:id="@+id/tvCheckPointDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_screen_offset"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/default_screen_offset"
        android:text="@string/checkpoint_management_description"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCrew" />

    <EditText
        android:id="@+id/etCheckPoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_screen_offset"
        android:layout_marginEnd="@dimen/default_screen_offset"
        android:hint="@string/checkpoint_management_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckPointDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>